# ulfm-legacy

./: .hgignore  AUTHORS  NEWS  VERSION  configure.ac
config/: ompi_ext.m4
contrib/: Makefile.am
contrib/amca-param-sets/: ft-enable-mpi
contrib/platform/ornl/ft/: debug-jaguar  ft-debug-jaguar  ft-optimized-jaguar  optimized-jaguar
contrib/platform/utk/: cray_xc30_darter
examples/: Makefile  Makefile.include  agree.c  agree4ever.c  benchagree.c  simpleagree.c  simpleiagree.c
ompi/: Makefile.am
ompi/attribute/: attribute_predefined.c
ompi/communicator/: Makefile.am  comm.c  comm_cid.c  comm_ft.c  comm_ft_propagate.c  comm_ft_reliable_bcast.c  comm_ft_revoke.c  comm_ft_revoke_orte.c  comm_init.c  communicator.h
ompi/config/: ompi_check_portals.m4
ompi/contrib/vt/vt/: configure.in
ompi/datatype/: ompi_datatype.h
ompi/errhandler/: Makefile.am  errcode.c  errhandler.c  errhandler.h  errhandler_invoke.c  errhandler_rte.c
ompi/group/: group.c  group.h  group_init.c  group_plist.c
ompi/include/: mpi.h.in  mpif-common.h
ompi/mca/bml/base/: bml_base_open.c
ompi/mca/btl/: btl.h
ompi/mca/btl/openib/: Makefile.am  btl_openib.c  btl_openib.h  btl_openib_component.c  btl_openib_endpoint.c  btl_openib_endpoint.h  btl_openib_fd.c  btl_openib_frag.c  btl_openib_frag.h  btl_openib_ini.c  btl_openib_ini.h  btl_openib_mca.c  configure.m4  mca-btl-openib-device-params.ini
ompi/mca/btl/portals/: btl_portals.c  btl_portals.h  btl_portals_component.c
ompi/mca/btl/tcp/: btl_tcp.c  btl_tcp.h  btl_tcp_endpoint.c  btl_tcp_endpoint.h  btl_tcp_frag.c
ompi/mca/coll/: coll.h
ompi/mca/coll/base/: base.h  coll_base_comm_select.c  coll_base_comm_unselect.c  coll_base_open.c  coll_tags.h
ompi/mca/coll/basic/: coll_basic_allreduce.c  coll_basic_module.c
ompi/mca/coll/demo/: coll_demo_module.c
ompi/mca/coll/fca/: coll_fca_module.c
ompi/mca/coll/ftbasic/: Makefile.am  coll_ftbasic.h  coll_ftbasic_agreement.c  coll_ftbasic_agreement.h  coll_ftbasic_agreement_2phase.c  coll_ftbasic_agreement_allreduce.c  coll_ftbasic_agreement_earlyreturning.c  coll_ftbasic_agreement_earlyterminating.c  coll_ftbasic_agreement_log2phase.c  coll_ftbasic_allgather.c  coll_ftbasic_allgatherv.c  coll_ftbasic_allreduce.c  coll_ftbasic_alltoall.c  coll_ftbasic_alltoallv.c  coll_ftbasic_alltoallw.c  coll_ftbasic_barrier.c  coll_ftbasic_bcast.c  coll_ftbasic_component.c  coll_ftbasic_exscan.c  coll_ftbasic_gather.c  coll_ftbasic_gatherv.c  coll_ftbasic_module.c  coll_ftbasic_reduce.c  coll_ftbasic_reduce_scatter.c  coll_ftbasic_scan.c  coll_ftbasic_scatter.c  coll_ftbasic_scatterv.c
ompi/mca/coll/hierarch/: coll_hierarch.c
ompi/mca/coll/inter/: coll_inter.c
ompi/mca/coll/self/: coll_self_module.c
ompi/mca/coll/sm/: coll_sm_module.c
ompi/mca/coll/sync/: coll_sync_module.c
ompi/mca/coll/tuned/: coll_tuned.h  coll_tuned_allreduce.c  coll_tuned_alltoall.c  coll_tuned_alltoallv.c  coll_tuned_bcast.c  coll_tuned_gather.c  coll_tuned_module.c  coll_tuned_reduce.c  coll_tuned_reduce_scatter.c  coll_tuned_util.c
ompi/mca/pml/: pml.h
ompi/mca/pml/base/: pml_base_recvreq.h  pml_base_sendreq.h
ompi/mca/pml/ob1/: pml_ob1.c  pml_ob1.h  pml_ob1_iprobe.c  pml_ob1_irecv.c  pml_ob1_recvfrag.c  pml_ob1_recvreq.c  pml_ob1_recvreq.h  pml_ob1_sendreq.c  pml_ob1_sendreq.h
ompi/mpi/: help-mpi-api.txt
ompi/mpi/c/: abort.c  accumulate.c  allgather.c  allgatherv.c  allreduce.c  alltoall.c  alltoallv.c  alltoallw.c  barrier.c  bcast.c  bsend.c  bsend_init.c  cart_coords.c  cart_create.c  cart_get.c  cart_map.c  cart_rank.c  cart_shift.c  cart_sub.c  cartdim_get.c  close_port.c  comm_accept.c  comm_connect.c  comm_create.c  comm_disconnect.c  comm_dup.c  comm_get_parent.c  comm_join.c  comm_spawn.c  comm_spawn_multiple.c  comm_split.c  comm_split_type.c  exscan.c  file_close.c  file_delete.c  file_get_amode.c  file_get_atomicity.c  file_get_byte_offset.c  file_get_group.c  file_get_info.c  (+107 more)
ompi/mpi/f77/: test_f.c  testall_f.c  testany_f.c  testsome_f.c  wait_f.c  waitall_f.c  waitany_f.c  waitsome_f.c
ompi/mpiext/ftmpi/: Makefile.am  mpiext_ftmpi_c.h  mpiext_ftmpi_f77.h  mpiext_ftmpi_f90.h
ompi/mpiext/ftmpi/c/: comm_agree.c  comm_agreement.c  comm_failure_ack.c  comm_failure_get_acked.c  comm_iagree.c  comm_iagreement.c  comm_invalidate.c  comm_revoke.c  comm_shrink.c
ompi/mpiext/ftmpi/f77/: comm_agree_f.c  comm_agreement_f.c  comm_failure_ack_f.c  comm_failure_get_acked_f.c  comm_iagree_f.c  comm_iagreement_f.c  comm_invalidate_f.c  comm_revoke_f.c  comm_shrink_f.c
ompi/mpiext/ftmpi/f77/profile/: Makefile.am  defines.h
ompi/proc/: proc.c  proc.h
ompi/request/: Makefile.am  grequest.c  req_ft.c  req_test.c  req_wait.c  request.c  request.h  request_dbg.h
ompi/runtime/: ompi_mpi_finalize.c  ompi_mpi_init.c  ompi_mpi_params.c  params.h
ompi/tools/ompi_info/: param.c
opal/class/: opal_pointer_array.c  opal_pointer_array.h
opal/config/: opal_configure_options.m4
opal/threads/: mutex.h
opal/util/: net.c  stacktrace.c
orte/config/: orte_check_alps.m4
orte/mca/errmgr/base/: base.h  errmgr_base_fns.c
orte/mca/errmgr/default_hnp/: errmgr_default_hnp.c
orte/mca/errmgr/rts_app/: Makefile.am  configure.m4  errmgr_rts_app.c  errmgr_rts_app.h  errmgr_rts_app_component.c
orte/mca/errmgr/rts_hnp/: Makefile.am  configure.m4  errmgr_rts_hnp.c  errmgr_rts_hnp.h  errmgr_rts_hnp_component.c
orte/mca/errmgr/rts_orted/: .windows  Makefile.am  configure.m4  errmgr_rts_orted.c  errmgr_rts_orted.h  errmgr_rts_orted_component.c
orte/mca/ess/base/: ess_base_std_app.c
orte/mca/ess/hnp/: ess_hnp_module.c
orte/mca/grpcomm/base/: grpcomm_base_coll.c
orte/mca/plm/: plm_types.h
orte/mca/rml/: rml_types.h
orte/tools/orte-clean/: orte-clean.c
orte/util/: error_strings.c  session_dir.c
test/: Makefile.am
test/mpi/: CMakeLists.txt  Makefile.am
test/mpi/environment/: Makefile.am
test/mpi/ft/: CMakeLists.txt  Makefile.am  err_returns.c  inv.c  invshrink.c  invshrinkkill.c  invshrinkkillrecover.c  revoke.c  revshrink.c  revshrinkkill.c  revshrinkkillrecover.c
(+19 files in other folders)
